fix album covers

--- a/merchstand.nekoweb.org/styles/music.css
+++ b/merchstand.nekoweb.org/styles/music.css
@@ -89,9 +89,9 @@ h1 {
 }
 .strokes {
   position: absolute;
-  width: 16vw;
-  top: 10.5vw;
-  left: 27.25vw;
+  width: 12.9vw;
+  top: 12.2vw;
+  left: 27.47vw;
   z-index: 1;
 }
 .am {
@@ -103,16 +103,16 @@ h1 {
 }
 .djo {
   position: absolute;
-  width: 12.5vw;
-  top: 11.5vw;
-  left: 58vw;
+  width: 13.1vw;
+  top: 11.6vw;
+  left: 57.3vw;
   z-index: 1;
 }
 .killers {
   position: absolute;
-  width: 9.75vw;
+  width: 10.03vw;
   top: 27.6vw;
-  left: 28.9vw;
+  left: 28.7vw;
   z-index: 1;
 }
 
@@ -142,7 +142,7 @@ h1 {
 
 .strokes:hover {
   scale: 105%;
-  translate: -0.5vw -0.1vh;
+  translate: -0.3vw 0.3vh;
 }
 .am:hover {
   scale: 105%;
@@ -150,11 +150,11 @@ h1 {
 }
 .djo:hover {
   scale: 105%;
-  translate: 0.1vw 0.2vh;
+  translate: 0.25vw 0.25vh;
 }
 .killers:hover {
   scale: 105%;
-  translate: -0.2vw 0.5vh;
+  translate: -0.2vw 0.3vh;
 }
 .arcadefire:hover {
   scale: 105%;
